server start-up with Java 9